--- a/DataServices/DataServices.csproj
+++ b/DataServices/DataServices.csproj
@@ -183,6 +183,11 @@
     <Compile Include="Repositories\ContaPagarRateioRepository.cs" />
     <Compile Include="Repositories\ContaPagarRepository.cs" />
     <Compile Include="Repositories\ContaPagarTagRepository.cs" />
+    <Compile Include="Repositories\ContaReceberAnexoRepository.cs" />
+    <Compile Include="Repositories\ContaReceberParcelaRepository.cs" />
+    <Compile Include="Repositories\ContaReceberRateioRepository.cs" />
+    <Compile Include="Repositories\ContaReceberRepository.cs" />
+    <Compile Include="Repositories\ContaReceberTagRepository.cs" />
     <Compile Include="Repositories\FormaPagamentoRepository.cs" />
     <Compile Include="Repositories\UnidadeRepository.cs" />
     <Compile Include="Repositories\CategoriaProdutoRepository.cs" />
