--- a/EntitiesServices/EntitiesServices.csproj
+++ b/EntitiesServices/EntitiesServices.csproj
@@ -205,6 +205,7 @@
     <Compile Include="EntitiesServices\MovimentoEstoqueProdutoService.cs" />
     <Compile Include="EntitiesServices\NoticiaService.cs" />
     <Compile Include="EntitiesServices\NotificacaoService.cs" />
+    <Compile Include="EntitiesServices\PedidoCompraService.cs" />
     <Compile Include="EntitiesServices\PerfilService.cs" />
     <Compile Include="EntitiesServices\ProdutoEstoqueFilialService.cs" />
     <Compile Include="EntitiesServices\ProdutoMovimentoEstoqueService.cs" />
@@ -247,6 +248,7 @@
     <Compile Include="Interfaces\EntitiesServices\IMovimentoEstoqueProdutoService.cs" />
     <Compile Include="Interfaces\EntitiesServices\INoticiaService.cs" />
     <Compile Include="Interfaces\EntitiesServices\INotificacaoService.cs" />
+    <Compile Include="Interfaces\EntitiesServices\IPedidoCompraService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IPerfilService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IPeriodicidadeService.cs" />
     <Compile Include="Interfaces\EntitiesServices\IProdutoEstoqueFilialService.cs" />
@@ -285,6 +287,10 @@
     <Compile Include="Interfaces\Repositories\IContaReceberRepository.cs" />
     <Compile Include="Interfaces\Repositories\IContaReceberTagRepository.cs" />
     <Compile Include="Interfaces\Repositories\IFormaPagamentoRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IItemPedidoCompraRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IPedidoCompraAcompanhamentoRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IPedidoCompraAnexoRepository.cs" />
+    <Compile Include="Interfaces\Repositories\IPedidoCompraRepository.cs" />
     <Compile Include="Interfaces\Repositories\IUnidadeRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICategoriaProdutoRepository.cs" />
     <Compile Include="Interfaces\Repositories\ICategoriaTelefoneRepository.cs" />
