--- a/EntitiesServices/EntitiesServices.csproj
+++ b/EntitiesServices/EntitiesServices.csproj
@@ -508,6 +508,9 @@
     <Compile Include="Model\GRUPO.cs">
       <DependentUpon>DUO_Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="Model\ITEM_PEDIDO_COMPRA.cs">
+      <DependentUpon>DUO_Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model\LOG.cs">
       <DependentUpon>DUO_Model.tt</DependentUpon>
     </Compile>
@@ -524,6 +527,15 @@
       <DependentUpon>DUO_Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\NOTIFICACAO_ANEXO.cs">
+      <DependentUpon>DUO_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\PEDIDO_COMPRA.cs">
+      <DependentUpon>DUO_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\PEDIDO_COMPRA_ACOMPANHAMENTO.cs">
+      <DependentUpon>DUO_Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Model\PEDIDO_COMPRA_ANEXO.cs">
       <DependentUpon>DUO_Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Model\PERFIL.cs">
@@ -641,6 +653,7 @@
       <DependentUpon>DUO_Model.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WorkClasses\AttachmentForn.cs" />
     <Compile Include="WorkClasses\CNPJ.cs" />
     <Compile Include="WorkClasses\Endereco.cs" />
     <Compile Include="WorkClasses\FileQueue.cs" />
