--- a/DataServices/DataServices.csproj
+++ b/DataServices/DataServices.csproj
@@ -188,11 +188,18 @@
     <Compile Include="Repositories\ContaReceberRateioRepository.cs" />
     <Compile Include="Repositories\ContaReceberRepository.cs" />
     <Compile Include="Repositories\ContaReceberTagRepository.cs" />
+    <Compile Include="Repositories\FormaEnvioRepository.cs" />
+    <Compile Include="Repositories\FormaFreteRepository.cs" />
     <Compile Include="Repositories\FormaPagamentoRepository.cs" />
     <Compile Include="Repositories\ItemPedidoCompraRepository.cs" />
+    <Compile Include="Repositories\ItemPedidoVendaRepository.cs" />
     <Compile Include="Repositories\PedidoCompraAcompanhamentoRepository.cs" />
     <Compile Include="Repositories\PedidoCompraAnexoRepository.cs" />
     <Compile Include="Repositories\PedidoCompraRepository.cs" />
+    <Compile Include="Repositories\PedidoVendaAnexoRepository.cs" />
+    <Compile Include="Repositories\PedidoVendaParcelaRepository.cs" />
+    <Compile Include="Repositories\PedidoVendaRepository.cs" />
+    <Compile Include="Repositories\ResumoVendaRepository.cs" />
     <Compile Include="Repositories\UnidadeRepository.cs" />
     <Compile Include="Repositories\CategoriaProdutoRepository.cs" />
     <Compile Include="Repositories\CategoriaTelefoneRepository.cs" />
