--- a/EntitiesServices/App.config
+++ b/EntitiesServices/App.config
@@ -27,6 +27,6 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <add name="DUO_DatabaseEntities" connectionString="metadata=res://*/Model.DUO_Model.csdl|res://*/Model.DUO_Model.ssdl|res://*/Model.DUO_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rtidatabaseserver.database.windows.net;initial catalog=DUO_Database;persist security info=True;user id=rti;password=a135701@&amp;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <!--<add name="DUO_DatabaseEntities" connectionString="metadata=res://*/Model.DUO_Model.csdl|res://*/Model.DUO_Model.ssdl|res://*/Model.DUO_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rtidatabaseserver.database.windows.net;initial catalog=DUO_Database;persist security info=True;user id=rti;password=a135701@&amp;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="DUO_DatabaseEntities" connectionString="metadata=res://*/Model.DUO_Model.csdl|res://*/Model.DUO_Model.ssdl|res://*/Model.DUO_Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=rtidatabaseserver.database.windows.net;initial catalog=DUO_Database;persist security info=True;user id=rti;password=a135701@&amp;;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
 </configuration>
